<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/history_period_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/history_period"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.FontPath"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_white_underline"
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:text="@string/history_wasted"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/history_total_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:layout_alignParentRight="true"
            android:text="@string/history_currency"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:text="@string/history_received"
            />

        <TextView
            android:id="@+id/history_total_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:text="@string/history_bonus"
            />

    </RelativeLayout>

</LinearLayout>