<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/qr_title"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:textColor="@color/colorPrimary"
        />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_orange_square"
        >

        <ImageView
            android:id="@+id/qr_code_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/qr_instructions"
        android:gravity="center"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        >

        <Button
            android:id="@+id/qr_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/qr_back"
            android:padding="15dp"
            />

    </RelativeLayout>


</LinearLayout>