<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >

            <TextView
                android:id="@+id/password_old_textview"
                android:layout_width="0dp"
                android:layout_weight="2.2"
                android:layout_height="wrap_content"
                android:text="@string/password_old_password"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_old_edittext"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.FontPath"
                app:met_textColor="@color/colorPrimaryDark"
                app:met_errorColor="@color/colorError"
                android:inputType="textWebPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.2"
                android:padding="4dp"
                android:layout_height="wrap_content"
                android:text="@string/password_new_password"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_new_edittext"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="40dp"
                android:textAppearance="@style/TextAppearance.FontPath"
                app:met_textColor="@color/colorPrimaryDark"
                app:met_errorColor="@color/colorError"
                android:inputType="textWebPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:padding="4dp"
                android:text="@string/password_repeat_new_password"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_repeat_new_edittext"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.FontPath"
                app:met_textColor="@color/colorPrimaryDark"
                app:met_errorColor="@color/colorError"
                android:inputType="textWebPassword"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/password_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:text="@string/profile_save"
        android:padding="@dimen/activity_vertical_margin"
        />

</RelativeLayout>